feature: search endpoints for users & categories fix: logger
