# src/categories/categories.controller.ts
@@ -10,7 +10,7 @@ import {
   UseGuards,
   UseInterceptors,
 } from '@nestjs/common';
-import { MsgCategoriesEnum, RolesEnum } from '../libs/enums';
+import { IndexesEnum, MsgCategoriesEnum, RolesEnum } from '../libs/enums';
 import { CACHE_CATEGORIES_KEY, MARKS_SERVICE_TAG } from '../libs/utils';
 import { ClientProxy } from '@nestjs/microservices';
 import { Public, Roles } from '../decorators';
@@ -20,10 +20,11 @@ import {
   CacheKey,
   Cache,
 } from '@nestjs/cache-manager';
-import { MicroserviceSender } from '../libs/helpers/microservice-sender';
 import { CreateCategoryDto, UpdateCategoryDto } from './dto';
 import { ApiTags } from '@nestjs/swagger';
 import { RolesGuard } from '../guards';
+import { MicroserviceSenderService } from '../libs/services';
+import { SearchDto } from '../user/dto';
 
 @ApiTags('Categories')
 @Controller('categories')
@@ -31,6 +32,7 @@ export class CategoriesController {
   constructor(
     @Inject(MARKS_SERVICE_TAG) private client: ClientProxy,
     @Inject(CACHE_MANAGER) private cacheManager: Cache,
+    private readonly senderService: MicroserviceSenderService,
   ) {}
 
   @Get('categories')
@@ -38,7 +40,7 @@ export class CategoriesController {
   @CacheKey(CACHE_CATEGORIES_KEY)
   @UseInterceptors(CacheInterceptor)
   async getCategories() {
-    return await MicroserviceSender.send(
+    return await this.senderService.send(
       this.client,
       MsgCategoriesEnum.CATEGORIES,
       {},
@@ -49,7 +51,7 @@ export class CategoriesController {
   @UseGuards(RolesGuard)
   @Post('create')
   async createCategory(@Body() dto: CreateCategoryDto) {
-    const result = await MicroserviceSender.send(
+    const result = await this.senderService.send(
       this.client,
       MsgCategoriesEnum.CREATE_CATEGORY,
       dto,
@@ -62,7 +64,7 @@ export class CategoriesController {
   @UseGuards(RolesGuard)
   @Delete()
   async deleteCategory(@Query('id') id: string) {
-    const result = await MicroserviceSender.send(
+    const result = await this.senderService.send(
       this.client,
       MsgCategoriesEnum.DELETE_CATEGORY,
       { id: Number(id) },
@@ -75,7 +77,7 @@ export class CategoriesController {
   @UseGuards(RolesGuard)
   @Patch()
   async updateCategory(@Body() dto: UpdateCategoryDto) {
-    const result = await MicroserviceSender.send(
+    const result = await this.senderService.send(
       this.client,
       MsgCategoriesEnum.UPDATE_CATEGORY,
       dto,
@@ -88,10 +90,25 @@ export class CategoriesController {
   @UseGuards(RolesGuard)
   @Get('stats')
   async getStats() {
-    return await MicroserviceSender.send(
+    return await this.senderService.send(
       this.client,
       MsgCategoriesEnum.CATEGORIES_STATS,
       {},
+    );
+  }
+
+  @Roles(RolesEnum.ADMIN)
+  @UseGuards(RolesGuard)
+  @Get('search')
+  async search(@Query() queries: { query: string }) {
+    const searchDto: SearchDto = {
+      query: queries.query,
+      index: IndexesEnum.CATEGORIES,
+    };
+    return await this.senderService.send(
+      this.client,
+      MsgCategoriesEnum.SEARCH_CATEGORIES,
+      searchDto,
     );
   }
 }
